<resources>
    <string name="app_name">JuicyScore</string>
    <string name="add_score">Ajouter</string>
    <string name="evaluate_restaurant">Evaluer un restaurant</string>
    <string name="input_restaurant_name_hint">Nom du restaurant</string>
    <string name="input_new_score_datetime_hint">Heure et date</string>
    <string name="food_rating_label">Nourriture</string>
    <string name="save">Enregistrer</string>
    <string name="share">Partager</string>
    <string name="description">Description</string>
    <string name="service">Service</string>
    <string name="decoration">Decoration</string>
    <string name="date">Date</string>
    <string name="hours">Heure</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">score</string>
</resources>