<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewScore">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:divider="@drawable/divider_vertical"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_new_score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/evaluate_restaurant"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/input_restaurant_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_new_score_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:inputType="text"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/input_new_score_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hours"
                android:inputType="text" />

            <TextView
                android:id="@+id/text_decoration_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decoration" />

            <RatingBar
                android:id="@+id/input_decoration_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/text_food_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_rating_label" />

            <RatingBar
                android:id="@+id/input_food_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/text_service_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/service" />

            <RatingBar
                android:id="@+id/input_service_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:stepSize="1.0" />

            <EditText
                android:id="@+id/input_new_score_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:divider="@drawable/divider"
                android:orientation="horizontal"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button_share_new_score"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/share" />

                <Button
                    android:id="@+id/button_save_new_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/save"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>