<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_vertical"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/fragment_rating_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/input_restaurant_name_hint" />

            <TextView
                android:id="@+id/fragment_rating_datetime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date" />
        </LinearLayout>

        <TextView
            android:id="@+id/fragment_rating_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:textAlignment="textEnd"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>